[workspace]
members = [
    "advance",
    "greeting",
    "guessing_game",
    "apollo-client-demo",
    "unit-test",
    "nom-sql",
    "concurrency",
    "oop",
    "clap_exer",
    "db_demo",
    "bytes-demo",
    "async-std-demo",
    "procedural_macro_main",
    "procedural_macro_derive",
    "config_exer",
    "actix-web-demo/demo0",
    "actix-web-demo/demo1"
]
