[package]
name = "advance"
version = "0.1.0"
authors = ["zy_tang <zy_tang@tomgs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_json = "1.0"
surf = "2.1.0"
async-std = { version = "1.6.5", features = ["unstable", "attributes"] }