[package]
name = "apollo-client-demo"
version = "0.1.0"
authors = ["zy_tang <zy_tang@tomgs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-client = { version = "0.5", features = ["full"] }
async-std = { version = "1.6.2", features = ["unstable", "attributes"] }
serde_json = { version = "1.0.44", features = ["preserve_order"] }
futures = { version = "0.3.1", features = ["alloc"] }
futures-timer = { version = "3.0.2", optional = true }
systemstat = { version = "0.1.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
config = "0.9"
lazy_static = "1.4.0"