[package]
name = "async-std-demo"
version = "0.1.0"
authors = ["tomgs <136082619@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.5", features = ["unstable"] }
futures = "0.3.4"
futures-core = { version = "0.3.4", optional = true, default-features = false }
futures-io = { version = "0.3.4", optional = true }
futures-lite = { version = "1.0.0", optional = true }
futures-channel = { version = "0.3.4", optional = true }