[package]
name = "config_exer"
version = "0.1.0"
authors = ["tomgs <136082619@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.8"
serde = "^1.0.8"
serde_json = { version = "1.0.44", features = ["preserve_order"] }
serde_yaml = "0.8"
config = "0.9"